# mobius-number

./: .gitignore  .zenodo.json  README.md  pyproject.toml
src/mobius_number/: __init__.py  core.py
tests/: test_mobius.py
